@@ -1,5 +1,10 @@
 # $Id$
 
+2008-12-18	Konstantin V. Arkhipov
+
+	* core/Cache/AggregateCache.class.php: restore true randomness upon
+	exit from guessLabel().
+
 2008-12-18	Vladlen Y. Koshelev
 
 	* core/Form/RegulatedForm.class.php: ruleExists() added.
